--- a/app/views/layouts/total.html.erb
+++ b/app/views/layouts/total.html.erb
@@ -16,7 +16,7 @@
     </header>
     <%= yield %>
     <footer>
-      <h1>現在の日時 : <%= Time.now.strftime("%Y年%m月%d日") %></h1>
+      <h1>現在の日時 : <%= Time.now.strftime("%Y年%m月%d日") %>   スケジュール合計: <%= @schedules.count %> </h1>
     </footer>
   </body>
 </html>
